@@ -1,7 +1,7 @@
 #  File src/library/grDevices/R/cairo.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2020 The R Core Team
+#  Copyright (C) 1995-2023 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -35,7 +35,7 @@ svg <- function(filename = if(onefile) "Rplots.svg" else "Rplot%03d.svg",
 
 cairo_pdf <- function(filename = if(onefile) "Rplots.pdf" else "Rplot%03d.pdf",
                       width = 7, height = 7, pointsize = 12,
-                      onefile = FALSE, family = "sans", bg = "white",
+                      onefile = TRUE, family = "sans", bg = "white",
                       antialias = c("default", "none", "gray", "subpixel"),
                       fallback_resolution = 300, symbolfamily)
 {
@@ -53,7 +53,7 @@ cairo_pdf <- function(filename = if(onefile) "Rplots.pdf" else "Rplot%03d.pdf",
 
 cairo_ps <- function(filename = if(onefile) "Rplots.ps" else "Rplot%03d.ps",
                      width = 7, height = 7, pointsize = 12,
-                     onefile = FALSE, family = "sans", bg = "white",
+                     onefile = TRUE, family = "sans", bg = "white",
                      antialias = c("default", "none", "gray", "subpixel"),
                      fallback_resolution = 300, symbolfamily)
 {
